Update and rename resource-room/subcategory-B/_posts/2018-01-01-test.md to resource-room/reading-1/_posts/2018-01-01-test.md

--- a/resource-room/reading-1/_posts/2018-01-01-test.md
+++ b/resource-room/reading-1/_posts/2018-01-01-test.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  API Market Place - MyInfo as a case study
-date:   2019-05-28
-permalink: /breakout/track-2/details
+title:  Product Design Lessons from Google
+date:   2018-07-02
+permalink: https://www.tech.gov.sg/media/technews/product-design-lessons-from-google
 ---
   
   
